--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Amir Hossein Jobeiri",
   "license": "ISC",
   "dependencies": {
-    "node-sass": "^5.0.0"
+    "node-sass": "^4.14.1",
+    "sass": "^1.29.0"
   }
 }
